--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "engine":"8.11.1"
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "8.11.1"
   },
   "author": "",
   "license": "ISC",
